<resources>
    <string name="app_name">CalendarEventsApp</string>
    <string name="event_list_header_text">Список событий</string>
    <string name="event_position_text">%1$d.</string>
    <string name="event_title_text_view">Event title:</string>
    <string name="event_title_hint">Stomatolog</string>
    <string name="event_description">Event description:</string>
    <string name="event_location">Location:</string>
    <string name="event_location_hint">Moscow</string>
    <string name="event_time">Time:</string>
    <string name="add_event_button_text">Add event</string>
    <string name="save_event_button_text">Save</string>
    <string name="delete_event_button_text">Delete</string>
    <string name="local_calendar_name">CalendarEventApp</string>
    <string name="empty_fields_toast_message">Please insert title of event</string>
</resources>
